2007-10-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def: moved rules 257.x to 253.x and re-enabled 253.b,
	  added new rules 265 - 270
	* support/regression/tests/bug1721024.c:new, added
	* support/regression/Makefile.in: renamed test-mcs51 to test-mcs51-small,
	  introduced new test-mcs51 to run all mcs51 tests

2007-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1816470.c: new, added

2007-10-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (resultTypePropagate): do propagate for LEFT_OP, do not
	  propagate for *,+,- with float, fixed bug 1816470
	  (decorateType): cast to resultTypeProp instead of resultType

2007-10-19 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c: fixed bug #983491 - "Merge duplicate strings
	  function is ineffective" for pic16 tareget
	* support/scripts/listerr.c: corrected include path
	* device/lib/_itoa.c: fixed bug #1806402 - _itoa and _uitoa leak to
	  adjacent memory

2007-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/using.c: new, added
	* support/regression/tests/vaargs.c: fixed and enabled test

2007-10-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c: fixed bug #983491 - Merge duplicate strings function
	  is ineffective
	* support/regression/tests/bug-983491.c: added regtest for bug #983491

2007-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented option --Werror
	* src/SDCCsymt.c (checkFunction): fixed bug 1815418 by setting
	  RegBankUsed[] earlier

2007-10-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/p89lpc938.h: new, added, thanks Kyle Guinn
	* src/pic/glue.c,
	* src/SDCCval.c,
	* src/SDCCast.c,
	* src/SDCCast.h: replaced AST_LIT_VALUE with AST_FLOAT_VALUE and
	  AST_ULONG_VALUE
	* src/SDCCast.c (decorateType): improved optimization of tri-op
	* src/SDCCerr.c (vwerror, setWError),
	* src/SDCCerr.h,