@@ -1,6 +1,4 @@
-# Port specification for the mcs51 port running with uCsim
-#
-# model small
+# Common specification for the mcs51 ports running with uCsim
 
 ifndef DEV_NULL
   DEV_NULL = /dev/null
@@ -15,7 +13,6 @@ S51 = $(shell if [ -f $(S51A) ]; then echo $(S51A); else echo $(S51B); fi)
 SDCCFLAGS +=--nostdinc --less-pedantic -DREENTRANT=reentrant -I$(INC_DIR)/mcs51 -I$(top_srcdir)
 LINKFLAGS = --nostdlib
 LINKFLAGS += mcs51.lib libsdcc.lib liblong.lib libint.lib libfloat.lib
-LIBDIR = $(top_builddir)/device/lib/build/small
 
 OBJEXT = .rel
 EXEEXT = .ihx
@@ -30,19 +27,19 @@ FWKLIB = $(PORT_CASES_DIR)/T2_isr$(OBJEXT)
 %$(OBJEXT): %.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
 
-$(PORT_CASES_DIR)/%$(OBJEXT): $(PORTS_DIR)/$(PORT)/%.c
+$(PORT_CASES_DIR)/%$(OBJEXT): $(PORTS_DIR)/mcs51-common/%.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
 
 $(PORT_CASES_DIR)/%$(OBJEXT): fwk/lib/%.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
 
 $(PORT_CASES_DIR)/fwk.lib:
-	cp $(PORTS_DIR)/mcs51/fwk.lib $@
+	cp $(PORTS_DIR)/mcs51-common/fwk.lib $@
 
 # run simulator with 30 seconds timeout
 %.out: %$(EXEEXT) gen/timeout
 	mkdir -p $(dir $@)
-	-gen/timeout 30 "$(S51)" -t32 -S in=$(DEV_NULL),out=$@ $< < $(PORTS_DIR)/mcs51/uCsim.cmd > $(@:.out=.sim) \
+	-gen/timeout 30 "$(S51)" -t32 -S in=$(DEV_NULL),out=$@ $< < $(PORTS_DIR)/mcs51-common/uCsim.cmd > $(@:.out=.sim) \
 	  || echo -e --- FAIL: \"timeout, simulation killed\" in $(<:$(EXEEXT)=.c)"\n"--- Summary: 1/1/1: timeout >> $@
 	python $(srcdir)/get_ticks.py < $(@:.out=.sim) >> $@
 	-grep -n FAIL $@ /dev/null || true
